# emc2101-rs

./: .gitignore  Cargo.toml  shell.nix
src/: error.rs  lib.rs
