[package]
authors = ["Georges Palauqui <g.palauqui@gptechinno.com>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Platform-agnostic Rust driver for the EMC2101 temperature sensor and fan sensor/controler."
documentation = "https://docs.rs/emc2101"
edition = "2021"
keywords = ["no-std", "embedded-hal-driver", "sensor", "temperature", "fan"]
license = "MIT OR Apache-2.0"
name = "emc2101"
repository = "https://github.com/Georges760/emc2101-rs"
rust-version = "1.88.0"
version = "2.0.1"

[dependencies]
bounded-integer = "0.6"
defmt = { version = "1.0", optional = true }
embedded-hal = { version = "1.0", optional = true }
embedded-hal-async = { version = "1.0", optional = true }
fugit = "0.3"
heapless = "0.9"
log = { version = "0.4", optional = true }
maybe-async-cfg2 = { version = "0.3" }
rustversion = "1.0"

[features]
async = ["dep:embedded-hal-async"]
default = ["sync"]
defmt = ["dep:defmt", "fugit/defmt", "heapless/defmt"]
sync = ["dep:embedded-hal"]

[dev-dependencies]
embedded-hal-mock = { version = "0.11.1", default-features = false, features = [
  "eh1",
] }
